--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,17 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_native_splash: ^2.0.1+1
+
+flutter_native_splash:
+
+  android: true
+  ios: true
+  web: false
+
+  color: "#FFFFFF"
+  # background_image: "assets/images/ulm_logo.png"
+  image: assets/images/ulm_logo.png
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -56,6 +67,8 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  assets:
+    - assets/images/ulm_logo.png
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -85,5 +98,11 @@ flutter:
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Bold.ttf
+        - asset: assets/fonts/Roboto-Medium.ttf
+        - asset: assets/fonts/Roboto-Regular.ttf
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
