--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,8 +47,8 @@ flutter_native_splash:
   web: false
 
   color: "#FFFFFF"
-  # background_image: "assets/images/ulm_logo.png"
-  image: assets/images/ulm_logo.png
+  # background_image:
+  image: "assets/images/ulm_logo.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
