--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ptik.portal_akademik">
    <application
-        android:label="portal_akademik"
+        android:label="Portal Akademik"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
