--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,12 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_native_splash: ^2.0.1+1
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  image_path: "assets/images/ulm_logo.png"
+  android: true
+  ios: true
 
 flutter_native_splash:
 
