--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   bottom_navy_bar: ^6.0.0
   carousel_slider: ^4.0.0
+  dio: ^4.0.4
+  shared_preferences: ^2.0.13
 
 dev_dependencies:
   flutter_test:
