--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   carousel_slider: ^4.0.0
   dio: ^4.0.4
   shared_preferences: ^2.0.13
+  provider: ^6.0.2
+  pretty_dio_logger: ^1.1.1
+  dio_log: ^2.0.2
 
 dev_dependencies:
   flutter_test:
