--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   provider: ^6.0.2
   pretty_dio_logger: ^1.1.1
   dio_log: ^2.0.2
+  fl_chart: ^0.45.0
 
 dev_dependencies:
   flutter_test:
