--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   pretty_dio_logger: ^1.1.1
   dio_log: ^2.0.2
   fl_chart: ^0.45.0
+  shimmer: ^2.0.0
+  fluttertoast: ^8.0.9
 
 dev_dependencies:
   flutter_test:
