--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   fl_chart: ^0.45.0
   shimmer: ^2.0.0
   fluttertoast: ^8.0.9
+  flutter_animated_dialog: ^2.0.1
+  simple_fontellico_progress_dialog: ^0.2.1
 
 dev_dependencies:
   flutter_test:
