--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   simple_fontellico_progress_dialog: ^0.2.1
   flutter_html: ^2.2.1
   horizontal_data_table: ^3.6.1+1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
