--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,8 @@ dependencies:
   flutter_html: ^2.2.1
   horizontal_data_table: ^3.6.1+1
   intl: ^0.17.0
+  flutter_rating_bar: ^4.0.0
+  flutter_cached_pdfview: ^0.4.1
 
 dev_dependencies:
   flutter_test:
