--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   intl: ^0.17.0
   flutter_rating_bar: ^4.0.0
   flutter_cached_pdfview: ^0.4.1
+  floating_action_bubble: ^1.1.4
 
 dev_dependencies:
   flutter_test:
